--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Random quote machine</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
@@ -15,9 +16,9 @@
 			<h2 class="quote"></h2>
 			<h3 class="author"></h3>
 		</div>
-		<div>
+		<div class="buttons">
 			<button class="trigger">Random quote</button>
-			<a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i>Tweet</a>
+			<a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i></a>
 		</div>
 	</main>
 	<script type="text/javascript" src="js/script.js"></script>
