--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="buttons">
 			<button class="trigger">Random quote</button>
-			<a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i></a>
+			<a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"> Tweet</i></a>
 		</div>
 	</main>
 	<script type="text/javascript" src="js/script.js"></script>
